<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/gameFragment">

    <fragment
        android:id="@+id/gameFragment"
        android:name="net.notiocide.minesweeper.ui.game.GameFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_gameFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpTo="@id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="net.notiocide.minesweeper.ui.settings.Settings2Fragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_presetSettingsFragment"
            app:destination="@id/presetSettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/presetSettingsFragment"
        android:name="net.notiocide.minesweeper.ui.settings.PresetSettingsFragment"
        android:label="@string/action_set_preset" />
</navigation>